--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,8 +1,64 @@
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="group5.projectprototype.MapActivity">
+
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="group5.projectprototype.MapActivity" />
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    tools:context="group5.projectprototype.MapActivity"
+    map:layout_constraintRight_toRightOf="parent"
+    map:layout_constraintTop_toTopOf="parent"
+    map:layout_constraintBottom_toBottomOf="parent"
+    map:layout_constraintVertical_bias="0.0"
+    map:layout_constraintLeft_toLeftOf="parent"
+    map:layout_constraintHorizontal_bias="1.0" />
+
+
+
+    <EditText
+        android:id="@+id/search1"
+        android:layout_width="340dp"
+        android:layout_height="65dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint=" Category:"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.11"
+        android:textColor="@android:color/black"
+        android:background="#cfffffff"
+        app:layout_constraintHorizontal_bias="0.509"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="230dp"
+        android:layout_height="65dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintVertical_bias="0.111" />
+
+
+</android.support.constraint.ConstraintLayout>
