--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -19,31 +19,29 @@
     map:layout_constraintBottom_toBottomOf="parent"
     map:layout_constraintVertical_bias="0.0"
     map:layout_constraintLeft_toLeftOf="parent"
-    map:layout_constraintHorizontal_bias="1.0" />
-
+    map:layout_constraintHorizontal_bias="0.0" />
 
 
     <EditText
         android:id="@+id/search1"
         android:layout_width="340dp"
         android:layout_height="65dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:background="#cfffffff"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint=" Category:"
-        android:layout_marginLeft="8dp"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/map"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.11"
-        android:textColor="@android:color/black"
-        android:background="#cfffffff"
-        app:layout_constraintHorizontal_bias="0.509"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -54,11 +52,69 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.955"
-        app:layout_constraintVertical_bias="0.111" />
+        app:layout_constraintHorizontal_bias="0.898"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/tag"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Tags : "
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="328dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        android:textColor="@android:color/black"
+        android:background="#7fffffff"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/search1"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/tagset"
+        android:layout_width="284dp"
+        android:layout_height="36dp"
+        android:background="@android:color/transparent"
+        android:textColor="@android:color/black"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.163"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.727" />
+
+    <Button
+        android:id="@+id/btclear"
+        android:layout_width="67dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#bff4aa42"
+        android:textColor="@android:color/white"
+        android:text="Clear"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="292dp"
+        app:layout_constraintHorizontal_bias="0.973"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/search1"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
