--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -71,7 +71,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.0"
         android:textColor="@android:color/black"
         android:background="#7fffffff"
         android:layout_marginTop="8dp"
@@ -80,7 +80,7 @@
 
     <EditText
         android:id="@+id/tagset"
-        android:layout_width="284dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@android:color/transparent"
         android:textColor="@android:color/black"
@@ -93,10 +93,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.163"
+        app:layout_constraintVertical_bias="0.166"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.727" />
+        app:layout_constraintHorizontal_bias="0.882" />
 
     <Button
         android:id="@+id/btclear"
@@ -110,11 +110,11 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="381dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toTopOf="@+id/search1"
+        android:layout_marginBottom="279dp"
+        app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tagset"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
