--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -28,8 +28,8 @@
         android:layout_height="65dp"
         android:layout_marginBottom="1dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:background="#cfffffff"
@@ -41,7 +41,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.059" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -56,27 +56,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.898"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.06"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
-    <EditText
-        android:id="@+id/tag"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Tags : "
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="328dp"
-        android:layout_marginRight="1dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:textColor="@android:color/black"
-        android:background="#7fffffff"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/search1"
-        app:layout_constraintVertical_bias="0.0" />
+
 
     <EditText
         android:id="@+id/tagset"
@@ -93,16 +77,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.166"
+        app:layout_constraintVertical_bias="0.262"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.882" />
+        app:layout_constraintHorizontal_bias="0.882"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/btclear"
-        android:layout_width="67dp"
+        android:layout_width="88dp"
         android:layout_height="60dp"
-        android:backgroundTint="#bff4aa42"
+        android:backgroundTint="#ffffff"
         android:textColor="@android:color/white"
         android:text="Clear"
         android:layout_marginLeft="8dp"
@@ -110,11 +96,14 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="279dp"
+        android:layout_marginBottom="355dp"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tagset"
-        app:layout_constraintVertical_bias="0.0" />
+
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+
+
 
 
 </android.support.constraint.ConstraintLayout>
