--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -34,76 +34,34 @@
         android:layout_marginTop="5dp"
         android:background="#cfffffff"
         android:ems="10"
-        android:hint=" Category:"
+        android:hint=" Category Selected:"
         android:inputType="textPersonName"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.059" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="230dp"
-        android:layout_height="65dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.898"
-        app:layout_constraintVertical_bias="0.06"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-
+        app:layout_constraintVertical_bias="0.122" />
 
     <EditText
-        android:id="@+id/tagset"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@android:color/transparent"
-        android:textColor="@android:color/black"
+        android:id="@+id/categoryselected"
+        android:layout_width="160dp"
+        android:layout_height="65dp"
         android:ems="10"
+        android:background="#00ffffff"
         android:inputType="textPersonName"
         android:text=""
+        android:textColor="@android:color/black"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.262"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.882"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-    <Button
-        android:id="@+id/btclear"
-        android:layout_width="88dp"
-        android:layout_height="60dp"
-        android:backgroundTint="#ffffff"
-        android:textColor="@android:color/white"
-        android:text="Clear"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="355dp"
-        app:layout_constraintHorizontal_bias="0.0"
-
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-
-
+        app:layout_constraintHorizontal_bias="0.899"
+        app:layout_constraintVertical_bias="0.119" />
 
 
 </android.support.constraint.ConstraintLayout>
