--- a/app/src/main/res/layout/activity_marker_page.xml
+++ b/app/src/main/res/layout/activity_marker_page.xml
@@ -23,7 +23,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintVertical_bias="0.498"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:focusable="false"/>
 
     <EditText
         android:id="@+id/marker_name"
@@ -60,7 +61,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintVertical_bias="0.611"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:focusable="false"/>
     <EditText
         android:id="@+id/marker_address"
         android:layout_width="250dp"
